refactor: change pt-BR occupation label

--- a/extension/locales/pt_BR/messages.json
+++ b/extension/locales/pt_BR/messages.json
@@ -30,7 +30,7 @@
     "message": "Selecione seu pronome"
   },
   "occupationLabel": {
-    "message": "Selecione sua ocupação"
+    "message": "Selecione sua profissão"
   },
   "pronounsTitle": {
     "message": "Pronomes"
