fix: gender pronoun

--- a/extension/locales/en/messages.json
+++ b/extension/locales/en/messages.json
@@ -39,7 +39,7 @@
     "message": "None"
   },
   "pronounsHeHim": {
-    "message": "He/His"
+    "message": "He/Him"
   },
   "pronounsSheHer": {
     "message": "She/Her"
