chore: minimal ui changes

--- a/extension/locales/en/messages.json
+++ b/extension/locales/en/messages.json
@@ -38,6 +38,9 @@
   "pronounsNone": {
     "message": "None"
   },
+  "pronounsnd": {
+    "message": "-"
+  },
   "pronounsHeHim": {
     "message": "He/Him"
   },
