--- a/extension/locales/pt_BR/messages.json
+++ b/extension/locales/pt_BR/messages.json
@@ -38,6 +38,9 @@
   "pronounsNone": {
     "message": "Nenhum"
   },
+  "pronounsnd": {
+    "message": "-"
+  },
   "pronounsHeHim": {
     "message": "Ele/Dele"
   },
