--- a/extension/locales/en/messages.json
+++ b/extension/locales/en/messages.json
@@ -77,6 +77,9 @@
   "occupationFullstackEngineer": {
     "message": "Full-stack engineer"
   },
+  "occupationUxUiDesigner": {
+    "message": "UX/UI Designer"
+  },
   "chatAppearanceTitle": {
     "message": "Chat Appearance"
   },
