--- a/extension/locales/pt_BR/messages.json
+++ b/extension/locales/pt_BR/messages.json
@@ -77,6 +77,9 @@
   "occupationFullstackEngineer": {
     "message": "Desenvolvedor Full-stack"
   },
+  "occupationUxUiDesigner": {
+    "message": "UX/UI Designer"
+  },
   "chatAppearanceTitle": {
     "message": "Aparência do Chat"
   },
